--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,11 @@
-numpy
-pandas
-tqdm
-scikit-learn
+numpy==1.24.3
+pandas==2.2.2
+tqdm==4.66.4
+scikit-learn==1.5.0
 torch
-scanpy
-dcor
-scipy
-joblib
+scanpy==1.10.1
+dcor==0.6
+scipy==1.13.1
+joblib==1.4.2
 pyyaml
+setuptools==69.5.1
